[project]
name = "koreaapi"
version = "0.1.0"
description = "The verifiable data layer for Korean culture & commerce, for AI agents."
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic>=2",
    "python-dotenv",
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
koreaapi-mcp = "koreaapi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/koreaapi"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
